--- a/index.html
+++ b/index.html
@@ -180,8 +180,13 @@
                 </ul>
             </div> <!--.escenario-->
         </div> <!--.escenarios-contenedor -->
+    </section>
+    <section class="galeria contenedor">
+        <h3>Galería</h3>
+        <ul class="galeria-imagenes"></ul>
 
     </section>
     
+    <script src="build/js/app.js"></script>
 </body>
 </html>
