se agrego seccion de boletos y footer

--- a/index.html
+++ b/index.html
@@ -186,6 +186,34 @@
         <ul class="galeria-imagenes"></ul>
 
     </section>
+    <section class="boletos">
+        <h3>Boletos</h3>
+        <div class="contenedor-boletos">
+            <div class="pase1">
+                <h3 class="pase">Pase 1 Día</h3>
+                <div class="table">
+                    <p class="titulo">Incluye</p>
+                    <p>Acceso a ambos escenarios</p>
+                    <p>Comida y Bebida</p>
+                    <p class="precio">100</p>
+                </div>
+            </div>
+            <div class="pase2">
+                <h3 class="pase">Pase 2 Días</h3>
+                <div class="table">
+                    <p class="titulo">Incluye</p>
+                    <p>Acceso a ambos escenarios</p>
+                    <p>Comida y Bebida</p>
+                    <p>Camisa del Evento</p>
+                    <p>Acceso VIP</p>
+                    <p class="precio">180</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>Rock & EDM Festival. Todos los derechos reservados</p>
+    </footer>
     
     <script src="build/js/app.js"></script>
 </body>
