--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class="contendor contenido-header">
             <h1>Rock & EDM Festival</h1>
             <nav class="navegacion-principal">
-                <a href="#">Line up</a>
-                <a href="#">Galeria</a>
-                <a href="#">Boletos</a>
+                <a href="#lineup">Line up</a>
+                <a href="#galeria">Galeria</a>
+                <a href="#boletos">Boletos</a>
             </nav>
         </div>
     </header>
@@ -181,12 +181,12 @@
             </div> <!--.escenario-->
         </div> <!--.escenarios-contenedor -->
     </section>
-    <section class="galeria contenedor">
+    <section id="galeria" class="galeria contenedor">
         <h3>Galería</h3>
         <ul class="galeria-imagenes"></ul>
 
     </section>
-    <section class="boletos">
+    <section id="boletos" class="boletos">
         <h3>Boletos</h3>
         <div class="contenedor-boletos">
             <div class="pase1">
